--- a/style.css
+++ b/style.css
@@ -21,3 +21,16 @@ body{
 }
 }
 /*____________________________________________________C l a s s selectors____________________________________________________________*/
+
+body{
+	font-family: Times;
+}
+
+header{
+	color: #749C69;
+}
+
+}
+th{
+	color: #222e1f;
+}
